--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ table.center {
   margin-left: auto;
   margin-right: auto;
   font-size: 30px;
-  width: 50%
+  width: 50%;
 }
 
 html {
@@ -56,7 +56,7 @@ border: 10px solid dimgrey;
 background-color: lightgray;
 }
 
-#moscow {
+.moscow {
 width: 10%;
 border: 5px solid black;
 float: left;
