--- a/style.css
+++ b/style.css
@@ -62,3 +62,12 @@ html {
   float: left;
   margin: 20px;
 }
+
+div.link {
+  font-size: 18px;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
